[Technique] Homogenize escape sequence (only name/email) and character encoding conversion